kube/deployment-bot.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bot
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bot
  template:
    metadata:
      labels:
        app: bot
    spec:
      containers:
      - name: bot
        image: lines14/bookmaker_parser_telegram_bot:latest
        ports:
        - name: bot-port
          containerPort: 2226
      imagePullSecrets:
      - name: docker-credentials
