kube/service-bot.yaml
apiVersion: v1
kind: Service
metadata:
  name: bot
spec:
  type: ClusterIP
  ports:
  - name: bot-svc-port
    port: 82
    targetPort: bot-port
    protocol: TCP
  selector:
    app: bot
