kube/ingress-bot.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-bot
  namespace: bot
  annotations:
      cert-manager.io/cluster-issuer: "letsencrypt-prod"
      nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - bot.lines14.site
    secretName: letsencrypt-prod
  rules:
  - host: bot.lines14.site
    http:
      paths:
      - path: /?(.*)
        pathType: Exact
        backend:
          service:
            name: bot
            port:
              number: 82
